--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,31 @@
             </a>
           </li>
           {% endif %}
+
+          {% if site.facebook_username %}
+          <li>
+            <a href="https://facebook.com/{{ site.facebook_username }}">
+              <span class="icon  icon--facebook">
+                <svg viewBox="0 0 512 512"><path fill="#828282" d="M256.42 50c-113.77 0-206 92.23-206 206s92.23 206 206 206 206-92.23 206-206S370.19 50 256.42 50zM317.39 171.19c0 0-20.6 0-28.79 0 -10.16 0-12.28 4.16-12.28 14.68 0 8.75 0 25.4 0 25.4h41.07l-3.95 44.6h-37.12v133.23h-53.2V256.44h-27.67v-45.16h27.67c0 0 0-6.49 0-35.56 0-33.38 17.85-50.81 57.44-50.81 6.48 0 36.83 0 36.83 0V171.19z"/></svg>
+              </span>
+
+              <span class="username">{{ site.facebook_username }}</span>
+            </a>
+          </li>
+          {% endif %}
+
+          {% if site.linkedin_username %}
+          <li>
+            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
+              <span class="icon  icon--linkedin">
+                <svg viewBox="0 0 512 512"><path  fill="#828282" d="M411.9 50h-312c-27.6 0-50 22.4-50 50v312c0 27.6 22.4 50 50 50h312c27.6 0 50-22.4 50-50V100C461.9 72.4 439.6 50 411.9 50zM181 393h-56.5V210.3h56.5V393zM152.5 186.4c-18.5 0-33.4-15.1-33.4-33.7 0-18.6 15-33.7 33.4-33.7 18.5 0 33.4 15.1 33.4 33.7C185.9 171.3 170.9 186.4 152.5 186.4zM392.9 393h-56.3c0 0 0-69.6 0-95.9 0-26.3-10-41-30.8-41 -22.6 0-34.5 15.3-34.5 41 0 28.1 0 95.9 0 95.9h-54.2V210.3h54.2v24.6c0 0 16.3-30.2 55-30.2s66.5 23.6 66.5 72.6C392.9 326.3 392.9 393 392.9 393z"/></svg>
+              </span>
+
+              <span class="username">{{ site.linkedin_username }}</span>
+            </a>
+          </li>
+          {% endif %}
+
         </ul>
       </div>
 
